<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2026 NAVER Corp.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.navercorp.pinpoint</groupId>
        <artifactId>pinpoint</artifactId>
        <version>3.1.0-SNAPSHOT</version>
    </parent>

    <artifactId>pinpoint-hbase-testcluster</artifactId>
    <name>pinpoint-hbase-minicluster</name>
    <packaging>jar</packaging>

    <properties>
        <jdk.version>17</jdk.version>
        <jdk.home>${env.JAVA_17_HOME}</jdk.home>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.hbase</groupId>
            <artifactId>hbase-shaded-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.hbase</groupId>
            <artifactId>hbase-shaded-testing-util</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.1.0.Final</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Logging dependencies -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${plugin.surefire.version}</version>
                <configuration>
                    <argLine>
                        @{argLine}
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
<!--                        &#45;&#45;add-opens java.base/java.io=ALL-UNNAMED-->
<!--                        &#45;&#45;add-opens java.base/java.net=ALL-UNNAMED-->
<!--                        &#45;&#45;add-opens java.base/java.nio=ALL-UNNAMED-->
<!--                        &#45;&#45;add-opens java.base/java.util=ALL-UNNAMED-->
<!--                        &#45;&#45;add-opens java.base/java.util.concurrent=ALL-UNNAMED-->
<!--                        &#45;&#45;add-opens java.base/sun.nio.ch=ALL-UNNAMED-->
<!--                        &#45;&#45;add-opens java.base/sun.net.dns=ALL-UNNAMED-->
<!--                        &#45;&#45;add-opens java.base/sun.security.action=ALL-UNNAMED-->
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>